# scalelsd

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
gradio_demo/: inference.py  line_mat_gluestick.py
line_matching/: run.py  run_list.py  two_view_pipeline.py  wireframe.py
predictor/: predict.py
scalelsd/: __init__.py
scalelsd/base/: __init__.py
scalelsd/base/csrc/: __init__.py
scalelsd/base/show/: canvas.py  painters.py
scalelsd/base/utils/: logger.py
scalelsd/encoder/: hafm.py
scalelsd/ssl/backbones/dpt/: models.py  vit.py
scalelsd/ssl/config/: project_config.py  utils.py
scalelsd/ssl/config/dataset/: hpatches_dataset.yaml  nyu_dataset.yaml  official_yorkurban_dataset.yaml  rdnim_dataset.yaml  synthetic_dataset-1024.yaml  synthetic_dataset-2k.yaml  synthetic_dataset-large.yaml  synthetic_dataset.yaml  wireframe_official_gt.yaml  yorkurban_dataset.yaml
scalelsd/ssl/datasets/: dataset_eval.py  dataset_util.py  hpatches_dataset.py  images_dataset.py  nyu_dataset.py  official_yorkurban_dataset.py  rdnim_dataset.py  synthetic_dataset.py  wireframe_dataset.py
scalelsd/ssl/datasets/transforms/: homographic_transforms.py
scalelsd/ssl/misc/: train_utils.py
scalelsd/ssl/models/: __init__.py  detector.py  hafm.py
scripts/: predict.sh
