[project]
name = "scalelsd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "cython>=3.1.3",
    "easydict>=1.13",
    "einops==0.7.0",
    "gradio>=5.44.0",
    "h5py>=3.14.0",
    "kornia>=0.8.1",
    "matplotlib>=3.10.5",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pycolmap>=3.12.5",
    "pydantic==2.10.6",
    "pynvml>=12.0.0",
    "python-json-logger>=3.3.0",
    "pytlsd",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "timm>=1.0.19",
    "tqdm>=4.67.1",
    "yacs>=0.1.8",
]

[tool.uv.sources]
pytlsd = { git = "https://github.com/iago-suarez/pytlsd.git", rev = "4180ab8" }
